--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,30 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
-
 .logo {
   height: 6em;
-  padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #af264baa);
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.img{
+  margin:0.5em;
+  width: 100px
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#article-img{
+  width: 300px
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#loggedin-img{
+  width: 100px
 }
 
-.card {
-  padding: 2em;
+#username{
+  font-size:20px;
 }
-
-.read-the-docs {
-  color: #888;
+.nav-link{
+  margin:0.5em;
 }
